--- a/web/frontend.html
+++ b/web/frontend.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-      <title>Hola Mundo</title>
-      <link rel="stylesheet" href="css/main.css">
-      <script type='text/javascript' src='/eel.js'></script>
-      <script type='text/javascript'>
+      <title>Generador de Reportes</title>
+        <link rel="stylesheet" href="css/main.css">
+        <script type='text/javascript' src='/eel.js'></script>
+        <script type='text/javascript'>
 
-      async function pick_file() {
-          let comando = document.getElementById('input-box').value;
-          let file_div = document.getElementById('file-name');
+        async function pick_file() {
+            let comando = document.getElementById('input_box').value;
+            let file_div = document.getElementById('file-name');
 
           // Call into Python so we can access the file system
-          let random_filename = await eel.pick_file(comando)();
-          file_div.innerHTML = random_filename;
-      }
+            let random_filename = await eel.pick_file(comando)();
+            file_div.innerHTML = random_filename;
+          }
+          async function clientes() {
+            let div_clientes = document.getElementById('div_clientes');
+            let clientes = await eel.clientes()();
 
-
-      async function clientes() {
-          let div_clientes = document.getElementById('div_clientes');
-          let clientes = await eel.clientes()();
-
-          div_clientes.innerHTML = clientes;
+            div_clientes.innerHTML = clientes;
           // console.log(clientes);
-          return "hola";
-      }
+            return "hola";
+          }
+
+          async function listaIncidentes(){
+            let div_incidents = document.getElementById('div_incidents');
+            let listaIncidentes = await eel.listaIncidentes()();
+
+            div_incidents.innerHTML = listaIncidentes;
+            console.log("Entro al script incidentes")
+            return "test";
+          }
+          function prueba (algo){
+            document.getElementById('input_box').value = algo
+            
+
+          }
       </script>
   </head>
-  <body>
-    <h1 id='file-name'>Generador de Reportes</h1>
-    <form onsubmit="pick_file(); return false;" >
-      <input id='input-box' placeholder='Ejemplo:Tigoco 3322'>
-      <button type="submit">Buscar</button>
-    </form>
-    <!-- <form onsubmit="clientes(); return false;" > -->
-    <button onclick="clientes()">Click me</button>
-    <!-- </form> -->
-    <div id='div_clientes'><div>
+  <body onload="clientes();listaIncidentes();">
+    <header align = "center">
+      <h1>Generador de Reportes</h1>
+    </header>
+      <aside>
+        <div>
+        <form onsubmit="pick_file(); return false;" >
+          <input id='input_box' class = "lineasComando">
+          <button class = "rainbow-button" type="submit">Buscar</button>
+        </form>
+      </div>
+      <div class = "vista_general">
+        <div class = "lista">
+            <h3 id="div_clientes"></h3>
+        </div>
+        <div class = "lista">
+            <h3 id='file-name' ></button>
+        </div>
+        <div class = "lista">
+          <h3 id="div_incidents"></h3>
+        </div>
+        <div class = "lista">
+          <h3>Reporte</h3>
+
+        </div>
+      </div>
+    </aside>
   </body>
 </html>
